--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "js-cookie": "^2.2.0",
     "vant": "^1.1.13",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
